--- a/src/components/Ecoconception.astro
+++ b/src/components/Ecoconception.astro
@@ -91,4 +91,30 @@
       }
     }
   }
+
+  @media screen and (max-width: 600px) {
+    .ecoconception {
+      padding: 10rem 1rem;
+      padding-bottom: 145px;
+      gap: 5rem;
+      h2 {
+        font-size: 3rem;
+        margin-bottom: 5rem;
+        margin-left: -1rem;
+      }
+      .content {
+        width: 100%;
+        h3 {
+          font-size: 1.5rem;
+        }
+      }
+      .peacock {
+        position: relative;
+        top: unset;
+        bottom: unset;
+        left: unset;
+        right: unset;
+      }
+    }
+  }
 </style>
