--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -59,6 +59,9 @@
       width: calc(100% - 2rem);
       gap: 2rem;
       height: max-content;
+      .links {
+        justify-content: space-between;
+      }
       .design {
         font-size: 1rem;
         text-align: center;
