--- a/src/components/HeroSiteWeb.astro
+++ b/src/components/HeroSiteWeb.astro
@@ -44,6 +44,7 @@
       text-align: center;
       max-width: 75rem;
       line-height: 1.125em;
+      z-index: 2;
       text-shadow:
         0px 0px 20px #000000aa,
         0px 0px 0.2em #000000aa;
@@ -349,6 +350,21 @@
     }
     100% {
       opacity: 0.1;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .heroSiteWeb {
+      padding: 2rem 1rem;
+      h1 {
+        font-size: 3rem;
+      }
+      .partners {
+        gap: 2rem;
+        .partner {
+          height: 50px;
+        }
+      }
     }
   }
 </style>
