--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,9 @@ import Logo from "./Logo.astro";
       <a href='/creation-site-web'>Un site web</a>
       <a href='/services'>Un dev fullstack</a>
       <a href='/portfolio'>Voir mes réalisations</a>
-      <BorderedButton addedClasses='mobileHeaderButton'>Me contacter</BorderedButton>
+      <BorderedButton addedClasses='mobileHeaderButton'
+        >Me contacter</BorderedButton
+      >
     </nav>
   </div>
 </header>
@@ -41,13 +43,22 @@ import Logo from "./Logo.astro";
     justify-content: center;
     align-items: center;
     padding: 2em 12%;
-    backdrop-filter: blur(10px);
     background: linear-gradient(
       191.71deg,
       rgba(0, 0, 0, 0.63) 1.22%,
       rgba(0, 0, 0, 0.07) 92.57%
     );
     z-index: 500;
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      backdrop-filter: blur(10px);
+    }
     .menuMobileButton {
       display: none;
     }
@@ -185,7 +196,7 @@ import Logo from "./Logo.astro";
         }
         :global(.mobileHeaderButton) {
           margin-top: 3rem;
-        } 
+        }
       }
     }
   }
