--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -177,12 +177,22 @@ import Logo from "./Logo.astro";
         position: fixed;
         width: 100vw;
         height: calc(100vh - 80px);
-        backdrop-filter: blur(10px);
         background: linear-gradient(
           11.71deg,
           rgba(0, 0, 0, 0.73) 1.22%,
           rgba(0, 0, 0, 0.37) 92.57%
         );
+        border-top: 1px solid #fff;
+        &::after {
+          content: "";
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          backdrop-filter: blur(10px);
+          z-index: -1;
+        }
         top: 80px;
         left: 0;
         z-index: -1;
