--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -42,7 +42,7 @@ import Logo from "./Logo.astro";
     max-width: 100vw;
     justify-content: center;
     align-items: center;
-    padding: 2em 12%;
+    padding: 1rem 12%;
     background: linear-gradient(
       191.71deg,
       rgba(0, 0, 0, 0.63) 1.22%,
@@ -66,19 +66,19 @@ import Logo from "./Logo.astro";
   #logo {
     margin-right: auto;
     position: relative;
-    height: 6rem;
+    height: 3rem;
     :global(svg) {
-      height: 6rem;
+      height: 3rem;
     }
   }
   nav {
     display: flex;
     align-items: center;
     gap: 2em;
-    padding: 1em 3em;
+    padding: 0 3rem;
     position: relative;
     overflow: hidden;
-    font-size: 1.25rem;
+    font-size: 1rem;
     .intro {
       font-style: italic;
       color: white;
