--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -123,8 +123,8 @@
     position: absolute;
     bottom: 0;
     right: 20%;
-    width: 15rem;
-    height: 15rem;
+    width: 10rem;
+    height: 10rem;
     z-index: 5;
     .contactAvatar {
       width: 100%;
@@ -150,9 +150,9 @@
     span {
       position: absolute;
       color: white;
-      top: -12rem;
-      left: 0;
-      font-size: 1.75rem;
+      top: -6rem;
+      left: -3rem;
+      font-size: 1.25rem;
       width: max-content;
       transform: rotate(-3deg);
       text-shadow: 0px 4px 10px #000000;
@@ -166,8 +166,8 @@
       position: absolute;
       bottom: 80%;
       left: 33%;
-      height: 10rem;
-      width: 10rem;
+      height: 5rem;
+      width: 5rem;
     }
   }
 
