--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -42,8 +42,9 @@ import SquareHammer from "./SquareHammer.astro";
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 5rem;
+    gap: 10rem;
     z-index: 2;
+    padding: 0 12%;
     h2 {
       color: rgba(255, 255, 255, 0.4);
       font-weight: bold;
@@ -52,6 +53,7 @@ import SquareHammer from "./SquareHammer.astro";
       max-width: 60vw;
       top: 0;
       margin: 0;
+      margin-left: -16%;
     }
     p {
       color: #4f4f4f;
@@ -72,7 +74,7 @@ import SquareHammer from "./SquareHammer.astro";
         width: 60rem;
         height: 60rem;
         position: absolute;
-        left: -20%;
+        left: -60%;
         top: 50%;
         z-index: -1;
         animation: rotateCircle 4s linear infinite;
@@ -80,7 +82,7 @@ import SquareHammer from "./SquareHammer.astro";
       .services {
         position: absolute;
         width: max-content;
-        left: 100%;
+        left: 150%;
         top: 115%;
         font-weight: bold;
         color: #4f4f4f;
