--- a/src/components/AllTechnologies.astro
+++ b/src/components/AllTechnologies.astro
@@ -1,10 +1,19 @@
-<section class="allTechnologies">
-  <h2>
-    Mes technologies
-  </h2>
+<section class='allTechnologies'>
+  <h2>Mes technologies</h2>
+  <svg viewBox='0 0 264 140' class='svg-11'>
+    <path
+      d='M206 53.9998C256.294 -3 105 -29.0002 10.0001 53.9997C-37 95.0629 101 173 206 53.9998Z'
+      fill='url(#tamere)'></path>
+    <defs>
+      <linearGradient id='tamere' x1='0' y1='0' x2='1' y2='1'>
+        <stop stop-color='#060A1900'></stop>
+        <stop offset='1' stop-color='#00BC84'></stop>
+      </linearGradient>
+    </defs>
+  </svg>
 </section>
 
-<style lang="scss">
+<style lang='scss'>
   .allTechnologies {
     display: flex;
     flex-direction: column;
