--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -1,89 +1,236 @@
-
-<svg viewBox="0 0 10 10" class="svg-1">
-  <path d="M2,2 L8,8" />
+<svg viewBox='0 0 10 10' class='svg-1'>
+  <path d='M2,2 L8,8'></path>
 </svg>
 
-<svg viewBox="0 0 10 10" class="svg-2">
-  <path d="M2,8 L5,2 L8,8" />
+<svg viewBox='0 0 10 10' class='svg-2'>
+  <path d='M2,8 L5,2 L8,8'></path>
 </svg>
 
-<svg viewBox="0 0 10 10" class="svg-3">
-  <path d="M2,2 Q8,2 8,8" />
+<svg viewBox='0 0 10 10' class='svg-3'>
+  <path d='M2,2 Q8,2 8,8'></path>
 </svg>
 
-<svg viewBox="0 0 10 10" class="svg-4">
-  <path d="M2,5 C2,8 8,8 8,5" />
+<svg viewBox='0 0 10 10' class='svg-4'>
+  <path d='M2,5 C2,8 8,8 8,5'></path>
 </svg>
 
-<svg viewBox="0 0 10 10" class="svg-5">
-  <path d="M2,2 L8,2 L2,5 L8,5 L2,8 L8,8" />
+<svg viewBox='0 0 10 10' class='svg-5'>
+  <path d='M2,2 L8,2 L2,5 L8,5 L2,8 L8,8'></path>
 </svg>
 
-<svg viewBox="0 0 10 10" class="svg-6">
-  <path d="M2,5 A 5 25 0 0 1 8 8" />
+<svg viewBox='0 0 10 10' class='svg-6'>
+  <path d='M2,5 A 5 25 0 0 1 8 8'></path>
 </svg>
 
-<svg viewBox="0 0 10 10" class="svg-7">
-  <path d="M2,5 S2,-2 4,5 S7,8 8,4" />
+<svg viewBox='0 0 10 10' class='svg-7'>
+  <path d='M2,5 S2,-2 4,5 S7,8 8,4'></path>
 </svg>
 
-<svg viewBox="0 0 10 10" class="svg-8">
-  <path d="M5,2 Q 2,5 5,8" />
+<svg viewBox='0 0 10 10' class='svg-8'>
+  <path d='M5,2 Q 2,5 5,8'></path>
 </svg>
 
-<svg viewBox="0 0 10 10" class="svg-9">
-  <path d="M2,2 Q5,2 5,5 T8,8" />
+<svg viewBox='0 0 10 10' class='svg-9'>
+  <path d='M2,2 Q5,2 5,5 T8,8'></path>
 </svg>
 
-<style lang="scss">
-.svg-1:hover path {
-  d: path("M8,2 L2,8");
-}
-.svg-2:hover path {
-  d: path("M2,2 L5,8 L8,2");
-}
-.svg-3:hover path {
-  d: path("M2,2 Q2,8 8,8");
-}
-.svg-4:hover path {
-  d: path("M2,5 C2,2 8,2 8,5");
-}
-.svg-5:hover path {
-  d: path("M3,3 L8,3 L2,5 L8,5 L3,7 L7,7");
-}
-.svg-6:hover path {
-  d: path("M2,5 A 5 25 -15 0 1 8 8");
-}
-.svg-7:hover path {
-  d: path("M2,5 S2,14 4,5 S7,8 8,4")
-}
-.svg-8:hover path {
-  d: path("M5,2 Q 8,5 5,8")
-}
-.svg-9:hover path {
-  d: path("M2,2 Q8,2 5,5 T8,8")
-}
+<svg viewBox='0 0 1591 1212' class='svg-10'>
+  <path
+    d='M307.932 949.63L96 1116L568.226 951.526C643.28 925.385 689.246 849.682 677.821 771.031C668.746 708.553 695.923 646.339 747.929 610.544L1495.5 96H1301.56C1184.8 96 1070.98 132.627 976.135 200.723L484.259 553.865C420.262 599.812 385.288 676.142 392.277 754.615C398.965 829.703 367.229 903.081 307.932 949.63'
+  ></path>
+</svg>
 
+<svg viewBox='0 0 226 210' class='svg-11' id='aurora'>
+  <g filter='url(#auroraBlur)'>
+    <path
+      d='M206 53.9998C256.294 -3 105 -29.0002 10.0001 53.9997C-37 95.0629 101 173 206 53.9998Z'
+      fill='url(#auroraGradient)'></path>
+  </g>
+  <defs>
+    <filter
+      id='auroraBlur'
+      x='0'
+      y='0'
+      width='226'
+      height='210'
+      filterUnits='userSpaceOnUse'
+      color-interpolation-filters='sRGB'
+    >
+      <feFlood flood-opacity='0' result='BackgroundImageFix'></feFlood>
+      <feBlend
+        mode='normal'
+        in='SourceGraphic'
+        in2='BackgroundImageFix'
+        result='shape'></feBlend>
+      <feGaussianBlur stdDeviation='10' result='effect1_foregroundBlur_516_663'
+      ></feGaussianBlur>
+    </filter>
+    <linearGradient id='auroraGradient' x1='0' y1='0' x2='1' y2='0'>
+      <stop stop-color='#95ddc7cc'></stop>
+      <stop offset='.1' stop-color='#00bc83cc'>
+        <animate
+          attributeName='stop-color'
+          dur='2s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='.15' stop-color='#00bc83cc'> </stop>
+      <stop offset='.2' stop-color='#95ddc7cc'>
+        <animate
+          attributeName='stop-color'
+          dur='3s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='.21' stop-color='#95ddc700'> </stop>
+      <stop offset='.3' stop-color='#95ddc7cc'>
+        <animate
+          attributeName='stop-color'
+          dur='3s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='.35' stop-color='#95ddc700'>
+        <animate
+          attributeName='stop-color'
+          dur='4s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='.4' stop-color='#00bc83cc'> </stop>
+      <stop offset='.45' stop-color='#95ddc7cc'>
+        <animate
+          attributeName='stop-color'
+          dur='2s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='.5' stop-color='#00bc83cc'> </stop>
+      <stop offset='.55' stop-color='#95ddc700'>
+        <animate
+          attributeName='stop-color'
+          dur='2s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='.65' stop-color='#95ddc7cc'>
+        <animate
+          attributeName='stop-color'
+          dur='4s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='.7' stop-color='#00bc83cc'> </stop>
+      <stop offset='.72' stop-color='#95ddc7cc'>
+        <animate
+          attributeName='stop-color'
+          dur='3s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='.75' stop-color='#95ddc700'>
+        <animate
+          attributeName='stop-color'
+          dur='3s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='.79' stop-color='#00bc83cc'> </stop>
+      <stop offset='.84' stop-color='#95ddc7cc'>
+        <animate
+          attributeName='stop-color'
+          dur='2s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='.88' stop-color='#00bc83cc'> </stop>
+      <stop offset='.92' stop-color='#95ddc700'>
+        <animate
+          attributeName='stop-color'
+          dur='4s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='.95' stop-color='#95ddc7cc'>
+        <animate
+          attributeName='stop-color'
+          dur='2s'
+          values='#00bc83cc; #95ddc7cc; #95ddc700; #00bc83cc'
+          repeatCount='indefinite'></animate>
+      </stop>
+      <stop offset='1' stop-color='#00bc83cc'> </stop>
+    </linearGradient>
+  </defs>
+</svg>
 
-body {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-svg {
-  width: 30%;
-  height: 30%;
-  background: #eee;
-  margin-bottom: 5%;
-}
-svg polyline,
-svg line,
-svg path {
-  fill: none;
-  stroke: #000;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  transition: 0.2s;
-}
+<style lang='scss'>
+  .svg-1:hover path {
+    d: path("M8,2 L2,8");
+  }
+  .svg-2:hover path {
+    d: path("M2,2 L5,8 L8,2");
+  }
+  .svg-3:hover path {
+    d: path("M2,2 Q2,8 8,8");
+  }
+  .svg-4:hover path {
+    d: path("M2,5 C2,2 8,2 8,5");
+  }
+  .svg-5:hover path {
+    d: path("M3,3 L8,3 L2,5 L8,5 L3,7 L7,7");
+  }
+  .svg-6:hover path {
+    d: path("M2,5 A 5 25 -15 0 1 8 8");
+  }
+  .svg-7:hover path {
+    d: path("M2,5 S2,14 4,5 S7,8 8,4");
+  }
+  .svg-8:hover path {
+    d: path("M5,2 Q 8,5 5,8");
+  }
+  .svg-9:hover path {
+    d: path("M2,2 Q8,2 5,5 T8,8");
+  }
+  .svg-10:hover path {
+    d: path(
+      "M245.327 955.807L96 1116L396.826 951.599C484.972 903.427 558.48 832.355 609.593 745.881L663.972 653.882C728.402 544.879 827.989 461.03 946.374 416.109L1790 96H1235.91C1160.74 96 1086.36 111.186 1017.21 140.645L720.732 266.951C566.209 332.782 449.559 464.715 403.154 626.139L373.442 729.494C349.158 813.969 305.261 891.512 245.327 955.807Z"
+    );
+  }
+  .svg-11 path {
+    animation: animateTaMere 3s linear infinite alternate;
+  }
 
+  @keyframes animateTaMere {
+    0% {
+      d: path(
+        "M53.5 130.5C17.1189 151.965 21.5 186 1 209C57.5 167.5 77.5763 177.581 103.5 167C128 157 129.103 90.2045 148 61C164.5 35.5 220.333 25.6667 225 1C220 8.66667 154.4 -5 116 31C68 76 103.5 101 53.5 130.5Z"
+      );
+    }
+    100% {
+      d: path(
+        "M48 108C14.4 133.6 2.66667 186 1 209C42 133 78.5 138.5 106.5 138.5C153.67 138.5 168.103 131.704 187 102.5C203.5 77 220.333 25.6667 225 1C220 8.66667 200.4 33 162 69C114 114 90 76 48 108Z"
+      );
+    }
+  }
+
+  body {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  svg {
+    width: 30%;
+    height: 30%;
+    background: #333;
+    margin-bottom: 5%;
+  }
+  svg polyline,
+  svg line,
+  svg path {
+    // fill: none;
+    // stroke: #000;
+    // stroke-linecap: round;
+    // stroke-linejoin: round;
+    transition: 2s;
+  }
 </style>
